--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
     <link href="css/gauss-jordan.css" rel="stylesheet">
     <link href="css/determinantes.css" rel="stylesheet">
     <link href="css/problema-logico.css" rel="stylesheet">
+    <link href="css/problema-logico4.css" rel="stylesheet">
+    <link href="css/problema-logico5.css" rel="stylesheet">
+    <link href="css/problema-logico6.css" rel="stylesheet">
+    <link href="css/problema-logico7.css" rel="stylesheet">
+    <link href="css/problema-logico8.css" rel="stylesheet">
+    <link href="css/problema-logico9.css" rel="stylesheet">
+    <link href="css/problema-logico10.css" rel="stylesheet">
+    <link href="css/problema-logico11.css" rel="stylesheet">
+    <link href="css/problema-logico12.css" rel="stylesheet">
+    <link href="css/problema-logico13.css" rel="stylesheet">
+    <link href="css/problema-logico14.css" rel="stylesheet">
+    <link href="css/problema-logico15.css" rel="stylesheet">
 </head>
 <body>
     <div id="sidebar">
@@ -46,6 +58,11 @@
             <li><button onclick="app.loadTool('problemaLogico8')">Problema Lógico Ocho</button></li>
             <li><button onclick="app.loadTool('problemaLogico9')">Problema Lógico Nueve</button></li>
             <li><button onclick="app.loadTool('problemaLogico10')">Problema Lógico Diez</button></li>
+            <li><button onclick="app.loadTool('problemaLogico11')">Problema Lógico Once</button></li>
+            <li><button onclick="app.loadTool('problemaLogico12')">Problema Lógico Doce</button></li>
+            <li><button onclick="app.loadTool('problemaLogico13')">Problema Lógico Trece</button></li>
+            <li><button onclick="app.loadTool('problemaLogico14')">Problema Lógico Catorce</button></li>
+            <li><button onclick="app.loadTool('problemaLogico15')">Problema Lógico Quince</button></li>
             <!-- Herramientas temporalmente deshabilitadas:
             <li><button onclick="app.loadTool('algebraLineal')">Sistemas de Ecuaciones (Gauss-Jordan)</button></li>
             <li><button onclick="app.loadTool('determinantes')">Determinantes por Operaciones</button></li>
@@ -87,6 +104,11 @@
     <script src="js/problema-logico8.js"></script>
     <script src="js/problema-logico9.js"></script>
     <script src="js/problema-logico10.js"></script>
+    <script src="js/problema-logico11.js"></script>
+    <script src="js/problema-logico12.js"></script>
+    <script src="js/problema-logico13.js"></script>
+    <script src="js/problema-logico14.js"></script>
+    <script src="js/problema-logico15.js"></script>
     <script src="js/determinantes.js"></script>
     <script src="js/gauss-jordan.js"></script>
     <script src="js/main.js"></script>
