--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
     <link href="css/problema-logico15.css" rel="stylesheet">
 </head>
 <body>
+    <!-- Botón para toggle del menú -->
+    <button id="menu-toggle" onclick="toggleSidebar()">
+        <i class="fas fa-bars"></i>
+    </button>
+
     <div id="sidebar">
         <h2>Comprensión lectora y razonamiento lógico interactivos</h2>
         <ul>
